# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

* rc-scripts 1.4.3.11p2 (14 Sep 2003)

  14 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    Revert previous changes, and substitute it for the bootsplash patches
    from Michael Aichler <micha@aichler.net>, bug #21019.  His www pages
    can be reached at:
    
      http://www.aichler.net/gentoo/bootsplash/

    I should note that the bootsplash stuff is not 100% tested.
    

* rc-scripts 1.4.3.11p1 (14 Sep 2003)

  14 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    Initial bootsplash patch as from LiveCD's.

    Add more tty's to /etc/init.d/numlock, bug #28252.

* rc-scripts 1.4.3.11 (14 Sep 2003)

  14 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add initial udev support.  Modified /sbin/rc and /etc/init.d/halt.sh.
    Resolves bug #27527.

    Add squid to /etc/services, bug #30995.  Other cleanups from rac.

    Add patch from Kumba <kumba@gentoo.org> to MAKEDEV to not allow
    running while pwd is root (/).

    Add 'after hotplug' to /etc/init.d/consolefont, bug #30856.

    Add entry for floppy in /etc/fstab, bug #30574.

    Remove changing group of /tmp/.{X,ICE}-unix, as it it not needed,
    bug #28861.

    Apply a patch from Mike Frysinger <vapier@gentoo.org> for rc-status.
    It now will work with runlevels named with any characters (other than
    ones found in default bash IFS).  It also adds a few sanity/error
    checks, bug #26432.

    Change /etc/inputrc to have PageUp/PageDown search through bash
    history again, bug #26036.

  14 Sep 2003; Martin Schlemmer <azarah@gentoo.org>:

    Change update-modules to modules-update in manpage, bug #28101.

* rc-scripts 1.4.3.10p1 (08 Sep 2003)

  08 Sep 2003; Martin Schlemmer <azarah@gentoo.org>:
  
    Change the '-k' switch to dhcpcd to '-z' in /etc/init.d/net.eth0.
